--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@
 
 .page_header {
     padding: 10px, 10px, 10px, 20;
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
+
 
 .section {
     padding: 10px, 10px, 10px, 20px;
