--- a/index.css
+++ b/index.css
@@ -5,11 +5,10 @@
 
 .page_header {
     padding: 10px, 10px, 10px, 20;
-    font-size: 1.5em;
 }
 
 h1 {
-    font-size: 2em;
+    font-size: large;
 }
 
 .section {
